--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01_card</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,300italic,400italic,600italic,700italic,800italic">
 </head>
+
 <body>
-    
+    <div class="card">
+        <img class="card-cover" src="https://successful-balance.surge.sh/batman-dark-knight.png" alt="batman">
+        <div class="card-contenido">
+            <h1 class="card-titulo">The Dark Knight</h1>
+            <h4 class="card-subtitulo">PG-13 / 2h 32min / Action, Crime, Drama</h4>
+            <h2 class="card-resumen">SUMMARY</h2>
+            <p class="card-parrafo">When the menace known as the Joker wreaks havoc and chaos on the people of Gotham,
+                Batman must accept one of
+                the greatest psychological and physical tests of his ability to fight injustice</p>
+            <p class="card-actor">Christian Bale, Heath Ledger, Aaron Eckhart</p>
+            <a class="card-boton" href="https://youtu.be/EXeTwQWrcwY">
+                <img src="https://successful-balance.surge.sh/play-button.png" alt="boton">
+                WATCH TRAILER
+            </a>
+        </div>
+    </div>
+
 </body>
+
 </html>
